force-app/main/default/objects/Guest_Services_Data__c/Guest_Services_Data__c.object-meta.xml
<CustomObject>
    <description>data to help with guest services types</description>
    <label>Guest Services Data</label>
    <nameField>
        <displayFormat>GSD-{00000}</displayFormat>
        <label>Guest Services Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guest Services Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>