force-app/main/default/objects/Guest_Services_Data__c/fields/Data_Code__c.field-meta.xml
<CustomField>
    <fullName>Data_Code__c</fullName>
    <description>a 2 character code to identify this data for use in number generation</description>
    <inlineHelpText>a 2 letter code to identify this data for use in number generation</inlineHelpText>
    <label>Data Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>