force-app/main/default/objects/Guest_Services_Data__c/fields/Data_Label__c.field-meta.xml
<CustomField>
    <fullName>Data_Label__c</fullName>
    <description>a screen friendly name for this data item (will appear in a drop down list)</description>
    <externalId>true</externalId>
    <inlineHelpText>a screen friendly name for this data item (will appear in a drop down list)</inlineHelpText>
    <label>Data Label</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>