force-app/main/default/objects/Guest_Services_Data__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Value</label>
    <type>Checkbox</type>
</CustomField>