force-app/main/default/objects/Guest_Services_Data__c/fields/Service_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Data_Type__c</fullName>
    <description>The type of data for the service.</description>
    <inlineHelpText>The type of data for the service</inlineHelpText>
    <label>Service Data Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guest Type</fullName>
            </value>
            <value>
                <fullName>HFS Collection Location</fullName>
            </value>
            <value>
                <fullName>HFS Payment Status</fullName>
            </value>
            <value>
                <fullName>LGL Deposit Status</fullName>
            </value>
            <value>
                <fullName>LGL Guest Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>