force-app/main/default/objects/Guest_Services_Data__c/fields/Used_In_Application__c.field-meta.xml
<CustomField>
    <fullName>Used_In_Application__c</fullName>
    <description>Allows to differentiate the values offered for distinct applications</description>
    <label>Used in Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HFS</fullName>
            </value>
            <value>
                <fullName>LGL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>