force-app/main/default/objects/Guest_Services_Data__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <description>The Village for which this data is associated to</description>
    <inlineHelpText>The Village for which this data is associated to</inlineHelpText>
    <label>Village</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Village</valueSetName>
    </valueSet>
</CustomField>